--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: #112211;
     background-color: #f0f3f6;
-    /*background: url("../img/metal.jpg");*/
+    background: url("../img/metal.jpg");
     font-family: arial, helvetica, sans-serif;
     margin: 0;
     padding: 0;
